# A2B-1

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  config.py  database.py  env.sample  main.py  pyproject.toml
backend/models/: __init__.py  contact_form.py  example.py
backend/routers/: chat.py  contact.py
backend/schemas/: __init__.py  contact.py
frontend/: Dockerfile
frontend/src/: App.jsx
frontend/src/components/: About.jsx  ChatBot.jsx  Contact.jsx  ContactInfo.jsx  Features.jsx  FloatingCards.jsx  Footer.jsx  FooterSection.jsx  Hero.jsx  Navbar.jsx  Services.jsx
frontend/src/config/: appData.js  contactData.js
frontend/src/styles/: About.css  App.css  ChatBot.css  Contact.css  ContactInfo.css  Features.css  FloatingCards.css  Footer.css  FooterSection.css  Hero.css  Navbar.css  Services.css  index.css
